--- a/src/OverBlaze/Pages/Overlay.razor
+++ b/src/OverBlaze/Pages/Overlay.razor
@@ -2,17 +2,19 @@
 @using OverBlaze.Services
 @using System.Threading
 @using System.Collections.ObjectModel
+@using OverBlaze.Models
 @layout EmptyLayout
 @inject ControlBus ControlBus
+@inject ImageStore ImageStore
 
 @foreach (var image in _images)
 {
-<img src="/images/@image.Path.TrimStart('/')" style="@image.Style" />
+<img src="/images/@image.Name.TrimStart('/')" style="@image.Style" class="ob-image" />
 }
 
 @code {
 
-  List<ToggleImage> _images = new();
+  List<ImageModel> _images = new();
 
   protected override Task OnInitializedAsync()
   {
@@ -20,15 +22,17 @@
     return Task.CompletedTask;
   }
 
-  private async Task ToggleImage(ToggleImage image)
+  private async Task ToggleImage(ToggleImage toggle)
   {
-    var existing = _images.FirstOrDefault(i => i.Path == image.Path);
+    var existing = _images.FirstOrDefault(i => i.Name == toggle.Name);
     if (existing is not null)
     {
       _images.Remove(existing);
     }
     else
     {
+      var image = await ImageStore.GetImage(toggle.Name);
+      if (image is null) return;
       _images.Add(image);
     }
     await InvokeAsync(StateHasChanged);
