--- a/src/OverBlaze/Pages/Overlay.razor
+++ b/src/OverBlaze/Pages/Overlay.razor
@@ -6,24 +6,47 @@
 @layout EmptyLayout
 @inject ControlBus ControlBus
 @inject ImageStore ImageStore
+@inject SoundStore SoundStore
+@inject IJSRuntime JS
 
 @foreach (var image in _images)
 {
 <img src="/images/@image.Name.TrimStart('/')" style="@image.Style" class="ob-image" />
 }
 
+@foreach (var sound in _sounds)
+{
+  <audio id="@sound.Name" src="/sounds/@sound.Name.TrimStart('/')"/>
+}
+
 @code {
 
   List<ImageModel> _images = new();
+  List<SoundModel> _sounds = new();
+  Dictionary<string, Action> _soundImages = new();
 
   protected override Task OnInitializedAsync()
   {
-    ControlBus.DisplayImage += ToggleImage;
+    ControlBus.ToggleImage += ToggleImage;
+    ControlBus.PlaySound += PlaySound;
     return Task.CompletedTask;
+  }
+
+  private async Task PlaySound(PlaySound play)
+  {
+    var dotnetHelper = DotNetObjectReference.Create(this);
+    var sound = await SoundStore.GetSound(play.Name);
+    if (sound is null) return;
+    _sounds.Add(sound);
+    await InvokeAsync(StateHasChanged);
+    await JS.InvokeVoidAsync("playSound", sound.Name, dotnetHelper);
   }
 
   private async Task ToggleImage(ToggleImage toggle)
   {
+    SoundModel? sound = null;
+    ImageModel? image = null;
+    
     var existing = _images.FirstOrDefault(i => i.Name == toggle.Name);
     if (existing is not null)
     {
@@ -31,11 +54,41 @@
     }
     else
     {
-      var image = await ImageStore.GetImage(toggle.Name);
+      image = await ImageStore.GetImage(toggle.Name);
       if (image is null) return;
       _images.Add(image);
+      if (image.Sound is not null)
+      {
+        sound = await SoundStore.GetSound(image.Sound);
+        if (sound is not null)
+        {
+          _sounds.Add(sound);
+        }
+      }
     }
     await InvokeAsync(StateHasChanged);
+    
+    if (sound is not null)
+    {
+      Action callback = () =>
+      {
+        _images.Remove(image);
+        _sounds.Remove(sound);
+      };
+      _soundImages[sound.Name] = callback;
+      var callbackRef = DotNetObjectReference.Create(this);
+      await JS.InvokeVoidAsync("playSound", sound.Name, callbackRef);
+    }
   }
 
+  [JSInvokable]
+  public void OnSoundEnded(string id)
+  {
+    if (_soundImages.TryGetValue(id, out var callback))
+    {
+      _soundImages.Remove(id);
+      callback();
+      StateHasChanged();
+    }
+  }
 }
