--- a/src/OverBlaze/Shared/MainLayout.razor
+++ b/src/OverBlaze/Shared/MainLayout.razor
@@ -1,9 +1,10 @@
+@using OverBlaze.Services
 @inherits LayoutComponentBase
 
 <div class="page">
     <div class="main">
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <LoginInfo/>
         </div>
 
         <div class="content px-4">
@@ -11,3 +12,5 @@
         </div>
     </div>
 </div>
+
+
